Check markdown style

--- a/Homework/20191211.md
+++ b/Homework/20191211.md
@@ -23,6 +23,11 @@ Nothing can escape his eyes.
 He write a lot of good but not see the light of day drama.
 3. Additionally, the commission was given a green light to be ready to act whenever European interests are affected.  
 另外，无论什么时候欧洲利益受到影响，委员会已经同意准备行动了。
+##答案  
+1. Nothing escapes his attention.
+2. He's written a lot of good scripts that have never seen the light of day.
+3. 另外，欧盟委员会有权在欧盟利益受到损害时做出反应。
+  
 
 
 
